# caviar-build-day

./: Cargo.toml
src/: main.rs
static/css/: style.css  style.scss
templates/: base.html  index.html  login.html
