[package]
name = "build_day_x_web_browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
askama = { version = "0.12.1", features = ["with-actix-web"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
