[package]
name = "build_day_x_web_browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
log = "0.4.20"
rust-analyzer = "0.0.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simplelog = "0.12.1"
uuid = { version = "1.6.1", features = ["v4"] }
